tests/error/misc_errors/wasm_bad_type.err
Error: WASM signature error (at $FILE:9:4)
  | 
7 | class Foo:
8 |     @wasm
9 |     def foo(self: "Foo", x: qubit) -> qubit: ...
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ WASM function signature contained an unsupported type:
  |                                                  `qubit`

Guppy compilation failed due to 1 previous error
